--- a/_projects/MAE3270.md
+++ b/_projects/MAE3270.md
@@ -7,4 +7,4 @@ image: assets/images/61PL67TIG9L.jpg
 ---
 
 Full report can be found here:
-[Report]({{"/assets/MAE 3270 Final HW.pdf" | relative_url }}) in PDF format.
+[Report]({{"assets/MAE 3270 Final HW (2).pdf" | relative_url }}) in PDF format.
