--- a/_projects/MAE3230.md
+++ b/_projects/MAE3230.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 title: Fluid Mechanics Dissection
-description: Class project with Graphs
-technologies: [MATLAB, python]
+description: Class project
+technologies: Fluid Mechanics, CAD
 image: assets/images/Screenshot 2025-12-09 175219.png
 ---
 
