--- a/_projects/MAE3270.md
+++ b/_projects/MAE3270.md
@@ -1,10 +1,10 @@
 ---
 layout: project
 title: MAE 3270 Final Project
-description: Calculating stresses and strain in a torque wrench
+description: Class Project
 technologies: ANSYS, CAD
 image: assets/images/61PL67TIG9L.jpg
 ---
-
+For this project we calculated the stresses and strain in a torque wrench
 Full report can be found here:
 [Report]({{"assets/MAE 3270 Final HW (2).pdf" | relative_url }}) in PDF format.
