--- a/_projects/MAE3260.md
+++ b/_projects/MAE3260.md
@@ -4,6 +4,12 @@ title: Controls of a 2D robotics arm
 description: Class Project
 technologies: System Dynamics
 image: /assets/images/spaceship-design.jpg
+
+For this project we found the dynamics and controls of a 2D robotic arm:
+Full report can be found here:
+[Report]({{"assets/ARMaggedon_ Final Groupwork.docx.pdf" | relative_url }}) in PDF format.
+
+
 ---
 
 
