--- a/_projects/MAE3260.md
+++ b/_projects/MAE3260.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Controls of a 2D robotics arm
+title: MAE 3230
 description: Class Project
 technologies: System Dynamics
 image: /assets/images/spaceship-design.jpg
