--- a/_projects/MAE3230.md
+++ b/_projects/MAE3230.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Fluid Mechanics Dissection
+title: MAE 3230
 description: Class project
 technologies: Fluid Mechanics, CAD
 image: assets/images/Screenshot 2025-12-09 175219.png
