--- a/_projects/MAE3270.md
+++ b/_projects/MAE3270.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: MAE 3270 Final Project
+title: MAE 3270
 description: Class Project
 technologies: ANSYS, CAD
 image: assets/images/61PL67TIG9L.jpg
