--- a/_projects/MAE3260.md
+++ b/_projects/MAE3260.md
@@ -3,12 +3,9 @@ layout: project
 title: MAE 3260
 description: Class Project
 technologies: System Dynamics
-image: assets/images/spaceship-design.jpg
+image: assets/images/Screenshot 2025-12-11 174604.png
 ---
-For this project we found the dynamics and controls of a 2D robotic arm:
+For this project we modeled a 2 link robotic arm and its control system
 Full report can be found here:
+
 [Report]({{"assets/ARMaggedon_ Final Groupwork.docx.pdf" | relative_url }})
-
-
-
-
