--- a/_projects/MAE3230.md
+++ b/_projects/MAE3230.md
@@ -7,3 +7,5 @@ image: assets/images/Screenshot 2025-12-09 175219.png
 ---
 
 We dissected the drain pump of an LG washer. Watch the video here: https://www.youtube.com/watch?v=0YVx6ttLZIE
+
+My contributions to this project was helping writing the script and doing the some of the calculations for the pump.
